# ecu-gateway

./: README
src/: ArchitectureDefinitions.hpp  ArchitectureDefinitions.hpp.in  CMakeLists.txt  main.cpp
src/downloader/: CMakeLists.txt
src/downloader/include/: CGWDownloader.hpp  CGWEventListener.hpp  DownloadDefinitions.hpp  DownloadUtils.hpp
src/downloader/src/: CGWDownloader.cpp  DownloadUtils.cpp
src/gatewayServer/: CMakeLists.txt
src/gatewayServer/include/: Server.hpp
src/gatewayServer/src/: Server.cpp
src/glibProxy/: CMakeLists.txt
src/glibProxy/interface/: IGLibProxy.hpp
src/glibProxy/src/: GLibProxy.cpp
src/httpServer/: CMakeLists.txt
src/httpServer/include/: HttpServer.hpp
src/httpServer/src/: HttpServer.cpp
src/stopToken/: CMakeLists.txt
src/stopToken/include/: StopToken.hpp
src/stopToken/src/: StopToken.cpp
src/utils/: CMakeLists.txt
src/utils/include/: LogInitializer.hpp  Logger.hpp
src/utils/src/: LogInitializer.cpp  Logger.cpp
